# Proposal-Automation-v2

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  README.md  auth.py  build.py  catalog.py  future.md  inspect_schema.py  inspect_variants.py  learn.py  mcp_server.py  pyproject.toml  test_order.py  tools.py  validate.py
azcalc/: adapter.py  driver.py  engine.py  js_snippets.py  learner.py
catalog/: AGENT_GUIDE.md  INDEX.md  catalog.json
catalog/services/: active-directory-b2c.md  active-directory.md  advanced-container-networking-services.md  advisor.md  aks-ee.md  aks-hci.md  analysis-services.md  api-management.md  app-configuration.md  app-service--static.md  app-service.md  application-gateway.md  backup.md  (+139 more)
configs/: example_estimate.json
schemas/: _failures.json  active-directory-b2c.json  active-directory.json  advanced-container-networking-services.json  advisor.json  aks-ee.json  aks-hci.json  analysis-services.json  api-management.json  app-configuration.json  app-service--static.json  app-service.json  application-gateway.json  artifact-signing.json  automation.json  azure-arc.json  azure-bastion.json  azure-cloud-hsm.json  azure-dedicated-hsm.json  azure-devops.json  azure-elastic-san.json  azure-firewall.json  azure-lighthouse.json  azure-maps.json  azure-migrate.json  azure-policy.json  azure-sentinel.json  azure-sql-database.json  azure-sql-edge.json  azure-sql.json  azure-stack-edge.json  azure-storage-discovery.json  azure-vmware.json  backup.json  bandwidth.json  batch.json  bot-services.json  cdn.json  chaos-studio.json  cloud-services.json  (+114 more)
(+3 files in other folders)
