[project]
name = "azcalc-v2"
version = "0.1.0"
description = "Self-learning Azure Pricing Calculator agent: discovers products, maps their selectors to JSON schemas, and builds estimates from JSON configs"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.2",
    "selenium>=4.21",
    "webdriver-manager>=4.0",
    "uvicorn>=0.30",
    "pyjwt[crypto]>=2.8",
]

[tool.uv]
package = false
